@@ -3,6 +3,7 @@
   2. Patch from John Binns to allow users to provide a callback to CGI::Carp.
   3. Added "~" as an unreserved character in escape().
   4. Patch from Chris Fedde to prevent HTTP_HOST from inhibiting SERVER_PORT in url() generation.
+  5. Fixed outdated documentation (and behavior) of -language in start_html -script option.
 
   Version 3.25
   1. Fixed the link to the Netscape frames page.
